--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,11 +10,7 @@
     mc:Ignorable="d"
     Title="silence!">
 
-    <Window.SystemBackdrop>
-        <MicaBackdrop />
-    </Window.SystemBackdrop>
-
-    <Grid>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="32"/>
             <RowDefinition Height="*"/>
@@ -64,7 +60,7 @@
                             VerticalAlignment="Center"
                             Background="#28A745">
                         <FontIcon x:Name="MuteIcon" 
-                                  FontFamily="Segoe Fluent Icons" 
+                                  FontFamily="{ThemeResource SymbolThemeFontFamily}" 
                                   Glyph="&#xE720;" 
                                   FontSize="24"
                                   Foreground="White"
@@ -80,7 +76,6 @@
                         <TextBlock Text="Microphone is" 
                                    FontSize="18" 
                                    FontWeight="SemiBold"
-                                   Foreground="White"
                                    VerticalAlignment="Center"/>
                         <!-- Animated text container with clipping -->
                         <Grid Height="26" VerticalAlignment="Center">
@@ -91,7 +86,6 @@
                                        Text="unmuted" 
                                        FontSize="18" 
                                        FontWeight="SemiBold"
-                                       Foreground="White"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Left">
                                 <TextBlock.RenderTransform>
@@ -102,7 +96,6 @@
                                        Text="muted" 
                                        FontSize="18" 
                                        FontWeight="SemiBold"
-                                       Foreground="White"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Left"
                                        Opacity="0">
