--- a/OverlayWindow.xaml
+++ b/OverlayWindow.xaml
@@ -7,19 +7,15 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <!-- Wrapper Grid to fill entire window -->
-    <Grid Background="{x:Null}">
-        <Border x:Name="RootGrid"
-                Background="#FF1E1E1E"
-                CornerRadius="24"
-                Width="48"
-                Height="48"
-                Padding="0"
-                Margin="0"
-                UseSystemFocusVisuals="False"
-                IsHitTestVisible="True"
-                IsTabStop="False">
-            <Grid x:Name="OverlayBorder" IsTabStop="False">
+    <!-- Simple container - window itself is rounded via DWM, semi-transparent to show blur -->
+    <Border x:Name="RootGrid"
+            Background="#801E1E1E"
+            Padding="0"
+            Margin="0"
+            UseSystemFocusVisuals="False"
+            IsHitTestVisible="True"
+            IsTabStop="False">
+        <Grid x:Name="OverlayBorder" IsTabStop="False">
                 <!-- Microphone Icon -->
                 <FontIcon x:Name="MicIcon"
                           FontFamily="{ThemeResource SymbolThemeFontFamily}"
@@ -29,23 +25,22 @@
                           HorizontalAlignment="Center"
                           VerticalAlignment="Center"
                           IsTabStop="False"/>
-            </Grid>
-        </Border>
-
-        <!-- Position mode hint (only visible when dragging) -->
-        <Border x:Name="PositionHintBorder"
-                Visibility="Collapsed"
-                Background="#CC000000"
-                CornerRadius="4"
-                Padding="8,4"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Bottom"
-                Margin="0,0,0,5">
-            <TextBlock x:Name="PositionHintText"
-                       Text="Drag to position"
-                       FontSize="11"
-                       Foreground="White"/>
-        </Border>
-    </Grid>
+                
+                <!-- Position mode hint (only visible when dragging) -->
+                <Border x:Name="PositionHintBorder"
+                        Visibility="Collapsed"
+                        Background="#CC000000"
+                        CornerRadius="4"
+                        Padding="8,4"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Bottom"
+                        Margin="0,0,0,-25">
+                    <TextBlock x:Name="PositionHintText"
+                               Text="Drag to position"
+                               FontSize="11"
+                               Foreground="White"/>
+                </Border>
+        </Grid>
+    </Border>
 </Window>
 
