--- a/OverlayWindow.xaml
+++ b/OverlayWindow.xaml
@@ -7,10 +7,10 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <!-- Simple container - window itself is rounded via DWM, semi-transparent to show blur -->
+    <!-- Simple solid background container -->
     <Border x:Name="RootGrid"
-            Background="#801E1E1E"
-            CornerRadius="8"
+            Background="#FF1E1E1E"
+            CornerRadius="6"
             Padding="0"
             Margin="0"
             UseSystemFocusVisuals="False"
