--- a/Pages/HoldToMutePage.xaml
+++ b/Pages/HoldToMutePage.xaml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page
-    x:Class="silence_.Pages.HoldToMutePage"
+<Page x:Class="silence_.Pages.HoldToMutePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="Transparent">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" Background="Transparent">
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto" 
-                  HorizontalScrollBarVisibility="Disabled">
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
         <StackPanel x:Name="ContentPanel" Spacing="20" Margin="24,24,24,24">
-        
+
             <!-- Description -->
             <StackPanel Spacing="8">
                 <TextBlock Text="Hold to Mute" FontWeight="SemiBold" FontSize="20"/>
-                <TextBlock Text="Mute/unmute your microphone while holding a hotkey" 
-                           FontSize="14" 
-                           Opacity="0.7" 
-                           TextWrapping="Wrap"/>
+                <TextBlock Text="Mute/unmute your microphone while holding a hotkey" FontSize="14" Opacity="0.7" TextWrapping="Wrap"/>
             </StackPanel>
 
             <!-- Hold Hotkey Configuration -->
             <StackPanel Spacing="8">
                 <TextBlock Text="Hotkey" FontWeight="SemiBold" FontSize="14"/>
-                
+
                 <Grid ColumnSpacing="8">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -32,85 +25,38 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid Grid.Column="0">
-                        <TextBox x:Name="HoldHotkeyTextBox" 
-                                 IsReadOnly="True"
-                                 PlaceholderText="Not set"
-                                 Text=""/>
-                        <ProgressBar x:Name="HoldHotkeyProgressBar"
-                                     Height="3"
-                                     VerticalAlignment="Bottom"
-                                     Margin="1,0,1,1"
-                                     Minimum="0"
-                                     Maximum="1"
-                                     Value="0"
-                                     Visibility="Collapsed"
-                                     ShowError="False"
-                                     ShowPaused="False"/>
+                        <TextBox x:Name="HoldHotkeyTextBox" IsReadOnly="True" PlaceholderText="Not set" Text=""/>
+                        <ProgressBar x:Name="HoldHotkeyProgressBar" Height="3" VerticalAlignment="Bottom" Margin="1,0,1,1" Minimum="0" Maximum="1" Value="0" Visibility="Collapsed" ShowError="False" ShowPaused="False"/>
                     </Grid>
-                    <Button x:Name="ClearHoldHotkeyButton" 
-                            Grid.Column="1"
-                            Content="&#xE711;"
-                            FontFamily="{ThemeResource SymbolThemeFontFamily}"
-                            Width="32"
-                            Height="32"
-                            Padding="0"
-                            ToolTipService.ToolTip="Clear hotkey"
-                            Click="ClearHoldHotkeyButton_Click"/>
-                    <Button x:Name="RecordHoldHotkeyButton" 
-                            Grid.Column="2"
-                            Content="Record"
-                            Click="RecordHoldHotkeyButton_Click"/>
+                    <Button x:Name="ClearHoldHotkeyButton" Grid.Column="1" Content="&#xE711;" FontFamily="{ThemeResource SymbolThemeFontFamily}" Width="32" Height="32" Padding="0" ToolTipService.ToolTip="Clear hotkey" Click="ClearHoldHotkeyButton_Click"/>
+                    <Button x:Name="RecordHoldHotkeyButton" Grid.Column="2" Content="Record" Click="RecordHoldHotkeyButton_Click"/>
                 </Grid>
-                <TextBlock x:Name="HoldHotkeyHintText"
-                           Text="Hold 2+ modifier keys for 1 second to bind them"
-                           FontSize="11"
-                           Opacity="0.6"
-                           Visibility="Collapsed"
-                           Margin="0,4,0,0"/>
-                <CheckBox x:Name="IgnoreHoldModifiersCheckBox"
-                          Content="Ignore modifiers (Shift, Ctrl, Alt, Win)"
-                          IsChecked="False"
-                          Checked="IgnoreHoldModifiersCheckBox_Changed"
-                          Unchecked="IgnoreHoldModifiersCheckBox_Changed"/>
+                <TextBlock x:Name="HoldHotkeyHintText" Text="To bind LMB, RMB or 2 modifier keys - hold them for 1 second" FontSize="11" Opacity="0.6" Visibility="Collapsed" Margin="0,4,0,0"/>
+                <CheckBox x:Name="IgnoreHoldModifiersCheckBox" Content="Ignore modifiers (Shift, Ctrl, Alt, Win)" IsChecked="False" Checked="IgnoreHoldModifiersCheckBox_Changed" Unchecked="IgnoreHoldModifiersCheckBox_Changed"/>
             </StackPanel>
 
             <!-- Action Selection -->
             <StackPanel Spacing="8">
                 <TextBlock Text="Action" FontWeight="SemiBold" FontSize="14"/>
-                
-                <ComboBox x:Name="HoldActionComboBox"
-                          HorizontalAlignment="Stretch"
-                          SelectionChanged="HoldActionComboBox_SelectionChanged">
+
+                <ComboBox x:Name="HoldActionComboBox" HorizontalAlignment="Stretch" SelectionChanged="HoldActionComboBox_SelectionChanged">
                     <ComboBoxItem Content="Toggle current state" Tag="Toggle"/>
                     <ComboBoxItem Content="Hold to mute" Tag="HoldToMute"/>
                     <ComboBoxItem Content="Hold to unmute" Tag="HoldToUnmute"/>
                 </ComboBox>
-                
-                <TextBlock x:Name="ActionDescriptionText"
-                           Text="Toggle between muted/unmuted while holding"
-                           FontSize="12"
-                           Opacity="0.6"
-                           TextWrapping="Wrap"
-                           Margin="0,4,0,0"/>
+
+                <TextBlock x:Name="ActionDescriptionText" Text="Toggle between muted/unmuted while holding" FontSize="12" Opacity="0.6" TextWrapping="Wrap" Margin="0,4,0,0"/>
             </StackPanel>
 
             <!-- Options -->
             <StackPanel Spacing="8">
                 <TextBlock Text="Options" FontWeight="SemiBold" FontSize="14"/>
-                
-                <CheckBox x:Name="HoldPlaySoundsCheckBox"
-                          Content="Play sounds"
-                          IsChecked="True"
-                          Checked="HoldPlaySoundsCheckBox_Changed"
-                          Unchecked="HoldPlaySoundsCheckBox_Changed"/>
-                
-                <CheckBox x:Name="HoldShowOverlayCheckBox"
-                          Content="Show overlay"
-                          IsChecked="True"
-                          Checked="HoldShowOverlayCheckBox_Changed"
-                          Unchecked="HoldShowOverlayCheckBox_Changed"/>
+
+                <CheckBox x:Name="HoldPlaySoundsCheckBox" Content="Play sounds" IsChecked="True" Checked="HoldPlaySoundsCheckBox_Changed" Unchecked="HoldPlaySoundsCheckBox_Changed"/>
+
+                <CheckBox x:Name="HoldShowOverlayCheckBox" Content="Show overlay" IsChecked="True" Checked="HoldShowOverlayCheckBox_Changed" Unchecked="HoldShowOverlayCheckBox_Changed"/>
             </StackPanel>
-        
+
         </StackPanel>
     </ScrollViewer>
 </Page>
